small test about jquery

--- a/developer/templates/log_in.html
+++ b/developer/templates/log_in.html
@@ -49,6 +49,7 @@
     </div>
     
     <script src="../static/lib/jquery-2.1.4.min.js"></script>
+        <script src="{% static 'lib/jQuery-func.js' %}"></script>
     <script src="../static/lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
