--- a/login/templates/profile.html
+++ b/login/templates/profile.html
@@ -15,9 +15,8 @@
     <div class="TimeAndGreet">
         <h1 id="time" class="time"></h1>
         <h2 class="greet">Good evening {{ username }}!</h2>
+        <button class="clockIn">CLOCK IN</button>
     </div>
-
-
     <script src="{% static 'lib/jquery-2.1.4.min.js' %}"></script>
     <script src="{% static 'js/showTime.js' %}"></script>
 </body>
