--- a/login/static/css/profile.css
+++ b/login/static/css/profile.css
@@ -1,8 +1,9 @@
 body {
-    padding-top: 200px;
+    padding-top: 170px;
 }
 
 .TimeAndGreet {
+    text-align: center;
 }
 
 .time {
@@ -11,22 +12,25 @@ body {
     letter-spacing: -5px;
     line-height: 1;
     font-weight: lighter;
-    text-align: center;
     margin-bottom: 0;
 }
 
 .greet {
     color: white;
-    text-align: center;
     font-size: 350%;
     font-weight: lighter;
     margin-top: 0;
 }
 .clockIn {
-    text-align: center;
-    color: red;
+    color: white;
     background-color: transparent;
+    margin-top: 62px;
+    line-height: 30px;
+    letter-spacing: -1px;
+    border-style: solid;
+    border-width: thin;
+    font-weight: 100;
     font-size: 20px;
-    width: 150px;
-    border-radius: 10px;
+    width: 158px;
+    border-radius: 6px;
 }
