--- a/login/static/css/profile.css
+++ b/login/static/css/profile.css
@@ -1,9 +1,19 @@
-body {
+.content {
     padding-top: 170px;
 }
 
 .TimeAndGreet {
     text-align: center;
+    background-image: url(/static/img/home2.jpg);
+    background-size: cover;
+    margin:0;
+    padding:0;
+}
+
+.sheet {
+    text-align: center;
+    background-image: url(/static/img/home.jpg);
+    background-size: cover;
 }
 
 .time {
