--- a/login/templates/profile.html
+++ b/login/templates/profile.html
@@ -11,12 +11,17 @@
     <link rel="stylesheet" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
 </head>
-<body background="{% static 'img/home2.jpg' %}">
+<body>
     <div class="TimeAndGreet">
-        <h1 id="time" class="time"></h1>
-        <h2 class="greet">Good <span id="period"></span> {{ username }}!</h2>
-        <button class="clockIn" id="clockIn">CLOCK IN</button>
-        <h1 id="attend" style="display: none; color: white;"></h1>
+        <div class="content">
+            <h1 id="time" class="time"></h1>
+            <h2 class="greet">Good <span id="period"></span> {{ username }}!</h2>
+            <button class="clockIn" id="clockIn">CLOCK IN</button>
+            <h1 id="attend" style="display: none; color: white;"></h1>
+        </div>
+    </div>
+    <div class="sheet">
+
     </div>
     <script src="{% static 'lib/jquery-2.1.4.min.js' %}"></script>
     <script src="{% static 'lib/jquery-ui.min.js' %}"></script>
