--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -8,7 +8,7 @@
     <title>Geek mooc</title>
 
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'lib/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body background="{% static 'img/home2.jpg' %}">
