--- a/login/static/css/profile.css
+++ b/login/static/css/profile.css
@@ -6,7 +6,7 @@
     text-align: center;
     background-image: url(/static/img/home2.jpg);
     background-size: cover;
-    height: 768px;
+    height: 768px;/*Should be changed to fix giant screen such as Mac*/
     margin:0;
     padding:0;
 }
@@ -36,7 +36,7 @@
 .sheet {
     text-align: center;
     background-image: url(/static/img/lake.jpg);
-    height: 768px;
+    height: 768px; /*Should be changed to fix giant screen such as Mac*/
     background-size: cover;
     margin:0;
     padding:0;
